--- a/amazing-page/amazing.html
+++ b/amazing-page/amazing.html
@@ -1709,7 +1709,7 @@
         <div class="left-two">
           <!-- 1  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/1.webp" alt="" class="two-img" />
             </div>
@@ -1718,7 +1718,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -1732,7 +1732,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۱۹,۹۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۲۵,۰۰۰</div>
@@ -1749,7 +1749,7 @@
           </a>
           <!-- 2  -->
           <a href="#" class="two-box">
-            <img src="images/finish2/Offer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/2.webp" alt="" class="two-img" />
             </div>
@@ -1759,7 +1759,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -1773,7 +1773,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۳۴۹,۹۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۶۰۴,۰۰۰</div>
@@ -1799,7 +1799,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -1813,7 +1813,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۳۵۷,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۶۰۰,۰۰۰</div>
@@ -1830,7 +1830,7 @@
           </a>
           <!-- 4  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/4.webp" alt="" class="two-img" />
             </div>
@@ -1848,7 +1848,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۳,۱۸۰,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۳,۶۰۰,۰۰۰</div>
@@ -1865,7 +1865,7 @@
           </a>
           <!-- 5  -->
           <a href="#" class="two-box">
-            <img src="images/finish2/Offer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/5.webp" alt="" class="two-img" />
             </div>
@@ -1883,7 +1883,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۵۴۹,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۱,۸۹۰,۰۰۰</div>
@@ -1900,14 +1900,14 @@
           </a>
           <!-- 6  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/6.webp" alt="" class="two-img" />
             </div>
             <h3 class="three">پالتو دخترانه دل آویز طرح خرگوش مدل T302</h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -1921,7 +1921,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۵۴۰,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۱,۱۰۰,۰۰۰</div>
@@ -1938,7 +1938,7 @@
           </a>
           <!-- 7  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/7.webp" alt="" class="two-img" />
             </div>
@@ -1947,7 +1947,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -1961,7 +1961,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۱۳,۸۹۹,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۱۴,۳۸۹,۰۰۰</div>
@@ -1978,14 +1978,14 @@
           </a>
           <!-- 8  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/8.webp" alt="" class="two-img" />
             </div>
             <h3 class="three">سرخ کن بدون روغن فیلیپس مدل NA230/00</h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2014,7 +2014,7 @@
           </a>
           <!-- 9  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/9.webp" alt="" class="two-img" />
             </div>
@@ -2025,7 +2025,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2039,7 +2039,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۳۲۹,۷۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۹۷۰,۰۰۰</div>
@@ -2056,7 +2056,7 @@
           </a>
           <!-- 10  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/10.webp" alt="" class="two-img" />
             </div>
@@ -2066,7 +2066,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2095,7 +2095,7 @@
           </a>
           <!-- 11  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/11.webp" alt="" class="two-img" />
             </div>
@@ -2104,7 +2104,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2118,7 +2118,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۲,۹۴۹,۶۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۳,۷۷۳,۰۰۰</div>
@@ -2135,7 +2135,7 @@
           </a>
           <!-- 12  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/12.webp" alt="" class="two-img" />
             </div>
@@ -2144,7 +2144,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2158,7 +2158,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۱۴,۵۴۴,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۱۸,۱۸۰,۰۰۰</div>
@@ -2173,7 +2173,7 @@
           </a>
           <!-- 13  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/13.webp" alt="" class="two-img" />
             </div>
@@ -2182,7 +2182,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2210,7 +2210,7 @@
           </a>
           <!-- 14  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/14.webp" alt="" class="two-img" />
             </div>
@@ -2219,7 +2219,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2232,7 +2232,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۵۵۸,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="imagll/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۱,۱۸۸,۰۰۰</div>
@@ -2249,14 +2249,14 @@
           </a>
           <!-- 15  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/15.webp" alt="" class="two-img" />
             </div>
             <h3 class="three">عینک آفتابی ری بن مدل 3025-004/62</h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2269,7 +2269,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۳,۶۰۶,۵۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۱۰,۳۷۴,۰۰۰</div>
@@ -2286,14 +2286,14 @@
           </a>
           <!-- 16  -->
           <a href="#" class="two-box">
-            <img src="images/finish2/Offer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/16.webp" alt="" class="two-img" />
             </div>
             <h3 class="three">ماوس بی سیم مخصوص بازی تسکو مدل GM 2035</h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2307,7 +2307,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۱,۵۹۹,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۲,۰۵۸,۰۰۰</div>
@@ -2322,14 +2322,14 @@
           </a>
           <!-- 17  -->
           <a href="#" class="two-box">
-            <img src="images/finish2/Offer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/17.webp" alt="" class="two-img" />
             </div>
             <h3 class="three">اتو و حالت دهنده ی مو لایچی مدل L-326</h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2342,7 +2342,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۹۹۹,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۱,۸۰۰,۰۰۰</div>
@@ -2357,7 +2357,7 @@
           </a>
           <!-- 18  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/18.webp" alt="" class="two-img" />
             </div>
@@ -2367,7 +2367,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2380,7 +2380,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۷,۹۹۹,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۸,۲۴۹,۰۰۰</div>
@@ -2395,7 +2395,7 @@
           </a>
           <!-- 19  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/19.webp" alt="" class="two-img" />
             </div>
@@ -2404,7 +2404,7 @@
             </h3>
             <div class="four-ex">
               <div class="ex-right">
-                <img src="images/finish/send.svg" alt="" class="send-img" />
+                <img src="./images/svg/farda.svg" alt="" class="send-img" />
                 ارسال امروز
               </div>
               <div class="ex-left">
@@ -2417,7 +2417,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۱,۹۱۹,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۲,۸۰۹,۰۰۰</div>
@@ -2434,7 +2434,7 @@
           </a>
           <!-- 20  -->
           <a href="#" class="two-box">
-            <img src="images/finish/IncredibleOffer.svg" alt="" class="one" />
+            <img src="images/all/incrideble.svg" alt="" class="one" />
             <div class="two">
               <img src="images/all/20.webp" alt="" class="two-img" />
             </div>
@@ -2452,7 +2452,7 @@
               </div>
               <div class="five-left">
                 <span class="left-sp">۱,۹۷۰,۰۰۰</span>
-                <img src="images/amz-day/toman.svg" alt="" class="left-img" />
+                <img src="images/all/toman.svg" alt="" class="left-img" />
               </div>
             </div>
             <div class="six">۳,۴۰۰,۰۰۰</div>
